# tabby-sync

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.https.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/: conftest.py  gunicorn.conf.py  manage.py  manage.sh  pyproject.toml  start.sh
backend/tabby/: health.py  middleware.py  settings.py  urls.py
backend/tabby/app/: admin.py  models.py  urls.py
backend/tabby/app/api/: __init__.py  config.py  user.py
backend/tabby/app/management/commands/: create_sync_user.py  refresh_token.py
backend/tabby/app/migrations/: 0001_initial.py  0002_hash_sync_token.py  0003_alter_user_active_config_alter_user_active_version.py
backend/tabby/app/templates/admin/app/user/: change_form.html  sync_token_shown.html
backend/tabby/app/tests/: test_admin.py  test_api_configs.py  test_api_user.py  test_auth_flows.py  test_e2e.py  test_http_negotiation.py  test_management_commands.py  test_middleware.py  test_models.py  test_settings.py  test_smoke.py
caddy/: Caddyfile
scripts/: generate-cert.sh
