[tool.poetry]
name = "tabby-sync"
version = "1.0.0"
description = "Minimal Tabby config sync backend"
authors = []

[tool.poetry.dependencies]
python = "^3.14"
Django = "6.0.4"
djangorestframework = "3.17.1"
python-dotenv = "1.2.2"
dj-database-url = "3.1.2"
gunicorn = "25.3.0"
django-cors-headers = "4.9.0"
whitenoise = "6.12.0"
mysqlclient = "2.2.8"

[tool.poetry.dev-dependencies]
ruff = "^0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
