[tool.poetry]
name = "tabby-sync"
version = "1.0.0-alpha1"
description = "Minimal Tabby config sync backend"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
Django = "6.0.4"
djangorestframework = "3.17.1"
python-dotenv = "1.2.2"
dj-database-url = "3.1.2"
gunicorn = "25.3.0"
django-cors-headers = "4.9.0"
whitenoise = "6.12.0"
psycopg = {version = "3.2.10", extras = ["binary"]}
mysqlclient = {version = "2.2.8", optional = true}

[tool.poetry.extras]
mysql = ["mysqlclient"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11"

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "DJ"]
ignore = [
    "E501",  # line too long: handled by the formatter
]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
